tests/baselines/reference/specializedOverloadWithRestParameters.errors.txt
specializedOverloadWithRestParameters.ts(6,5): error TS2322: Type 'null' is not assignable to type 'Base'.
specializedOverloadWithRestParameters.ts(11,5): error TS2322: Type 'null' is not assignable to type 'Base'.


==== specializedOverloadWithRestParameters.ts (2 errors) ====
    class Base { foo() { } }
    class Derived1 extends Base { bar() { } }
    function f(tagName: 'span', ...args): Derived1;   // error
    function f(tagName: number, ...args): Base;
    function f(tagName: any): Base {
        return null;
        ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'Base'.
    }
    function g(tagName: 'span', arg): Derived1;    // error
    function g(tagName: number, arg): Base;
    function g(tagName: any): Base {
        return null;
        ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'Base'.
    }